style.css
/* ... */
table, td.grand {
	width: 100%;
}
#instruct img {
	margin: 10px;
}
input, textarea, select, .border_inset  {
	border: 2px solid #888;
	border-radius: 4px;
	background-color: #fff;
}

.selectable_list_item {
	border-radius: 6px;
	cursor: pointer;
}
.selectable_list_item:hover {
	background-color: #eee;
	box-shadow: 0px 0px 3px #333;
}

/*=============== Тело  ======================================================*/
body {
	background-color: #eee;
}
body > #body {
	margin: 0px auto;
	max-width: 1200px;
	display: grid;
	grid-template-columns: 2fr 5fr;
}
/*=============== Окна сайта =================================================*/
.windowSite {
	-webkit-transition: all .5s;
	transition: all .5s;
	text-align: center;
	margin: 5px;
	position: relative;
	border: 3px solid #fff;
	border-radius: 6px;
	background-color: #f7f7f7;
	padding: 5px;
	box-shadow: 0px 0px 5px #888;
}
	.windowSite:hover {
			box-shadow: 0px 0px 10px #000;
		}

.windowTitle {
	position: absolute;
	display: flex;
	font-size: 12pt;
	top: -3px;
	left: 10px;
	border: 3px solid #fff;
	border-top: 0px;
	background-color: #eee;
	padding: 4px;
	border-radius: 0px 0px 7px 7px;
	z-index: 200;
}
	.windowTitle li {
		border: 2px solid #555;
		background-color: #bbb;
		margin-top: -10px;
		padding: 2px 10px;
		border-radius: 4px;
	}
	.windowTitle .k_up {
		margin-left: 10px;
 	}

/*=============== Списки в меню и над игрой ==================================*/
	#menu {
		grid-column: 1 / 3;
		margin-bottom: 20px;
		height: 60px;
	}
		#menu > a > img {
			float: left;
			height: 100%;
		}
		#menu ul {
			position: absolute;
			display: flex;
			bottom: -10px;
			left: 250px;
		}
			#menu ul li {
				border: 3px solid #fff;
				background-color: #eee;
				height: 36px;
				margin: 5px 5px 7px 5px;
				padding: 4px 4px 0px 4px;
				border-bottom: 0px;
				border-radius: 7px 7px 0px 0px;
			}
				#menu ul li a {
					position: relative;
					min-width: 30px;
					height: 30px;
					padding: 4px;
					display: block;
					border: 2px solid #555;
					background-color: #bbb;
					border-radius: 4px;
					box-shadow: 0px 0px 3px #fff;
					margin-bottom: -6px;
					cursor: pointer;
				}
				#menu ul li a:hover {
					background-color: #ddd !important;
				}
		#letter {
			position: absolute;
			width: 13px; height: 10px;
			top: -5px; right: -5px;
			background-image: url('img/letter.png');
		}

/* ============== Блок атентификации ======================================== */
	#blockAuth {
		float: right;
		display: grid;
		grid-template-columns: 300px 1fr;
		text-align: right;
	}
		#blockAuth i {
			vertical-align: middle;
			padding: 0px 10px;
		}
		#blockAuth #myNballov {
			grid-column: 1 / 2;
			font-size: 20pt;
			vertical-align: middle;
			padding: 0px 10px;
		}
		#blockAuth .avatar {
			grid-column: 2 / 3;
			grid-row: 1 / 3;
			align-content: center;
			margin: 3px 10px;
		}
		#blockAuth form {
			grid-column: 2 / 3;
			grid-row: 1 / 3;
			display: grid;
			grid-template-columns: 3fr 5fr 1fr 1fr;
			grid-template-rows: 1fr 1fr;
			grid-column-gap: 5px;
			grid-row-gap: 2px;
		}
		#registration {grid-column: 4 / 5; grid-row: 1 / 3;}

/*=============== Левый экран с пользователями и играми ======================*/

	#user_top {
		min-width: 250px;
	}
		#user_top_middle {
			-webkit-transition: all 2s;
			transition: all 2s;
			display: block;
			overflow: auto;
			scroll-behavior: smooth;
			height: 500px;
			padding: 20px 10px 0px 6px;
		}

		.selected_subgame_item {
			border-radius: 6px;
			background-color: #ccc;
			box-shadow: 0px 0px 3px #000;
		}

/*=============== Список игр =================================================*/
  #box_game {
		min-width: 750px;
		display: flex;
		flex-direction: column;
	}
			.winPreshowGameItem {
					width: 65%;
					margin-bottom: -20px;
			}
			.winPreshowGameItem:last-child {
					margin-bottom: 5px;
			}
			.winPreshowGameItem:hover {
					z-index: 1111;
			}
			.winPreshowGameItem a > img {
				width: 240px;
				height: 160px;
				margin: 5px;
				border: 2px solid #ccc;
				border-radius: 4px;
			}
			.winPreshowGameItem.chet   {text-align: left; padding-right: 25px; align-self: flex-start;}
			.winPreshowGameItem.nechet {text-align: right; padding-left: 25px; align-self: flex-end;}
			.winPreshowGameItem a      {display: inline-block;}
			.winPreshowGameItem.chet img.border_inset   {float: left;}
			.winPreshowGameItem.nechet img.border_inset {float: right;}
			.winPreshowGameItem.chet .list   {position: absolute; right: -170px;}
			.winPreshowGameItem.nechet .list {position: absolute; left: -170px;}
			.list {
				top: 10px;
				width: 170px;
				text-align: left;
			}
			div.winPreshowGameItem div.list ul:hover {
				color: #fff;
				text-shadow: #000 0px 0px 8px;
				cursor: pointer;
			}
			div.winPreshowGameItem ul.line_game_nechet {
				margin-left: 20px;
			}
			div.winPreshowGameItem ul li {
				margin-top: -4px;
				vertical-align: middle;
				display: inline-block;
			}


			.record {
				position: absolute;
				max-width: 210px;
				text-align: left;
				font-size: 10pt;
				top: -3px;
				border: 3px solid #fff; border-top: 0px;
				background-color: #eee;
				padding: 4px;
				border-radius: 0px 0px 7px 7px;
				cursor: default;
			}
			.record.chet {
				left: 20px;
			}
			.record.nechet {
				right: 20px;
			}
				.record div {
					-webkit-transition: all 1s ease;
					transition: all 1s ease;
					border: 2px solid #555;
					background-color: #bbb;
					margin: -10px 0px 0px 0px;
					padding: 6px;
					overflow: hidden;
					height: 10px;
					cursor: default;
					border-radius: 4px;
				}
				.record div:hover {
					height: 180px;
				}
				.record:first-of-type ul:first-of-type img{
					position: absolute;
					top: -15px;
					left: 10px;
				}
				.record:first-of-type ul:first-of-type {
					font-weight: bold;
					margin-left: 10px;
					margin-bottom: 13px;
				}
				.record ul:nth-child(even) {
					margin-left: 20px;
				}
/* ... */

